# efficient-unet-inference

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: benchmark_unet.py  models.py
src/: config.py  data.py  finetune.py  main.py  run_benchmark.py  utils.py
src/models/: baseline.py
